--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -12,5 +12,6 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="System.Linq" Version="4.3.0" />
+    <PackageReference Include="MailKit" Version="2.1.4" />
   </ItemGroup>
 </Project>
