removed entities project and added entities and context to api project

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
+  "ConnectionString": {
+    "PoolChampionDB": "server=MY_SERVER;database=PoolChampionDB;User ID=MY_USER;password=MY_PASSWORD;"
+  },
   "AllowedHosts": "*"
 }
