--- a/DomainTest/DomainTest.csproj
+++ b/DomainTest/DomainTest.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -11,7 +11,6 @@
     <PackageReference Include="NUnit3TestAdapter" Version="3.11.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="Shouldly" Version="3.0.2" />
-    <ProjectReference Include="..\Domain\Domain.csproj" />
 
     <PackageReference Include="System.Linq" Version="4.3.0" />
   </ItemGroup>
@@ -19,6 +18,10 @@
   <ItemGroup>
     <Compile Remove="UnitTest1.cs" />
     <Compile Remove="EmptyClass.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
 
